[tool.poetry]
name = "facemask-cnn"
version = "0.1.0"
description = ""
authors = ["James Moro <james.moro.11@gmail.com>"]
readme = "README.md"
packages = [{include = "facemask_cnn"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
torch = "^2.1.2"
torchvision = "^0.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
